--- a/koch/manifest.json
+++ b/koch/manifest.json
@@ -1,20 +1,24 @@
 {
-  "name": "Koch Snowflake",
-  "short_name": "Snowflake",
-  "start_url": ".",
-  "display": "fullscreen",
-  "background_color": "#000000",
-  "theme_color": "#000000",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+"name": "Multithreaded Fractal Explorer",
+"short_name": "Fractal",
+"description": "An interactive mathematical fractal explorer using multithreading.",
+"start_url": "index.html",
+"display": "standalone",
+"background_color": "#000000",
+"theme_color": "#000000",
+"orientation": "any",
+"icons": [
+{
+"src": "icon192.png",
+"sizes": "192x192",
+"type": "image/svg+xml",
+"purpose": "any maskable"
+},
+{
+"src": "icon512.png",
+"sizes": "512x512",
+"type": "image/svg+xml",
+"purpose": "any maskable"
+}
+]
 }
